--- a/commet/linux/flatpak/chat.commet.commetapp.yaml
+++ b/commet/linux/flatpak/chat.commet.commetapp.yaml
@@ -24,6 +24,7 @@ finish-args:
 - "--filesystem=xdg-download"
 - "--talk-name=org.freedesktop.Notifications"
 - "--talk-name=org.freedesktop.Flatpak"
+- "--talk-name=org.freedesktop.portal.Desktop"
 - "--system-talk-name=org.freedesktop.NetworkManager"
 - "--env=LD_LIBRARY_PATH=/app/lib"
 modules:
